fix error ` title align`

--- a/app/style.css
+++ b/app/style.css
@@ -20,6 +20,7 @@ body {
 
 .header{
   text-align: center;
+  margin-right: 45px;
 }
 
 .header-title {
